// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should normal first render with normal props values 1`] = `
<ImageGallery
  galleryStructureConfig={
    Object {
      "columnsCount": 3,
      "maxSquareSizeInColumns": 2,
      "rowsCount": 3,
    }
  }
  getRandomImage={[Function]}
>
  <div
    className="gallery"
    style={
      Object {
        "gridTemplateColumns": "repeat(3, 1fr)",
        "height": undefined,
      }
    }
  />
</ImageGallery>
`;

exports[`Should normal render with first useEffect with normal props values 1`] = `
<ImageGallery
  galleryStructureConfig={
    Object {
      "columnsCount": 3,
      "maxSquareSizeInColumns": 2,
      "rowsCount": 3,
    }
  }
  getRandomImage={[Function]}
>
  <div
    className="gallery"
    style={
      Object {
        "gridTemplateColumns": "repeat(3, 1fr)",
        "height": undefined,
      }
    }
  />
</ImageGallery>
`;

exports[`Should normal render with useEffect update with normal props values 1`] = `
<ImageGallery
  galleryStructureConfig={
    Object {
      "columnsCount": 3,
      "maxSquareSizeInColumns": 2,
      "rowsCount": 3,
    }
  }
  getRandomImage={[Function]}
>
  <div
    className="gallery"
    style={
      Object {
        "gridTemplateColumns": "repeat(3, 1fr)",
        "height": undefined,
      }
    }
  />
</ImageGallery>
`;

exports[`Should not rerender render with useEffect update with wrong props values 1`] = `
<ImageGallery
  galleryStructureConfig={
    Object {
      "columnsCount": 3,
      "maxSquareSizeInColumns": 2,
      "rowsCount": 3,
    }
  }
  getRandomImage={[Function]}
  simultaneouslyImageChanging={0}
>
  <div
    className="gallery"
    style={
      Object {
        "gridTemplateColumns": "repeat(3, 1fr)",
        "height": undefined,
      }
    }
  />
</ImageGallery>
`;
